--- a/src/main/resources/notetaker/views/register.fxml
+++ b/src/main/resources/notetaker/views/register.fxml
@@ -2,32 +2,34 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hoteller.controllers.RegisterController" >
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="notetaker.controllers.RegisterController" >
    <center>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" BorderPane.alignment="CENTER">
          <children>
             <Label text="Brukernavn" />
-            <TextField />
+            <TextField fx:id="username" />
             <Label text="Passord" />
-            <TextField />
+            <TextField fx:id="password" />
             <Label text="Gjenta passord" />
-            <TextField />
-            <Label text="">
+            <TextField fx:id="repeatPassword" />
+            <Label text="" fx:id="feedback">
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Registrer">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Registrer" onAction="#register">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
+            <Hyperlink alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" onAction="#gotoLogin" text="Logg inn" textAlignment="CENTER" underline="true" VBox.vgrow="ALWAYS" />
          </children>
       </VBox>
    </center>
