--- a/src/main/resources/notetaker/views/notes.fxml
+++ b/src/main/resources/notetaker/views/notes.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -24,7 +25,6 @@
                <content>
                   <VBox fx:id="notelist" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                      <children>
-                        <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Button" />
                      </children>
                   </VBox>
                </content>
@@ -52,7 +52,11 @@
             <HBox prefHeight="32.0" prefWidth="450.0">
                <children>
                   <TextField fx:id="fileName" HBox.hgrow="ALWAYS" />
-                  <Button mnemonicParsing="false" onAction="#save" text="Saved 💾" />
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#save" text="Saved 💾">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </HBox>
             <TextArea fx:id="content" prefHeight="408.0" prefWidth="493.0" />
